# netflix-django-clone

./: LICENSE  README.md  pyproject.toml
core/: models.py  urls.py  views.py
core/migrations/: 0001_initial.py
django_netflix/: settings.py  urls.py
netlix_django_clone/: manage.py
netlix_django_clone/django_netflix/: apps.py
netlix_django_clone/netlix_django_clone/: asgi.py  settings.py  urls.py  wsgi.py
templates/: index.html
