[tool.poetry]
name = "netflix-django-clone"
version = "0.1.0"
description = ""
authors = ["SteDev78 <stedev78@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.1"
django-allauth = "^0.47.0"
whitenoise = "^5.3.0"
dj-database-url = "^0.5.0"
Pillow = "^9.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
